--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="inner">
 
         <header>
-          <h1>The Cymbalta WIthdrawal Project</h1>
+          <h1>The Cymbalta Withdrawal Project</h1>
           <h2>Fighting withdrawal with Science</h2>
         </header>
 
@@ -26,7 +26,7 @@
   <nav role="navigation" class="collapse navbar-collapse navbar main-nav">
  <ul class="nav navbar-nav navbar-left">
 	<li><a href="index.html">Home</a></li>
-	<li><a href="cymbalta-withdrawal-brain-zaps.html">Cymbalta Withdrawal Brain Zaps</a></li>
+	<li><a href="#Everything-You-Need-To-Know-about-Cymbalta-Withdrawal-Symptoms">Cymbalta Withdrawal symptoms</a></li>
 	<li><a href="black-seed-oil-and-antidepressants.html">Black Seed oil and Antidepressants</a></li>
 	<li><a href="how-long-does-cymbalta-withdrawal-last.html">How long does Cymbalta withdrawal last?</a></li>
 	<li><a href="macka-bs-black-seed-oil.html">Macka B's - Black Seed oil</a></li>
@@ -37,8 +37,10 @@
 
         <section id="main_content">
           <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<a id="cymbalta-withdrawal-symptoms" class="anchor" href="#Everything-You-Need-To-Know-about-Cymbalta-Withdrawal-Symptoms" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Everything You Need To Know About Cymbalta Withdrawal Symptoms</h3>
+<p>If you have ever encountered the popular antidepressant, Cymbalta, you might already know that it is a potent medication. Thus, you need to follow proper guidelines for both its consumption and withdrawal (we recommend clinical prescription). 
+In this article, you can read everything that you need to know about Cymbalta withdrawal symptoms. So, without further ado, let's jump straight into the article:
+</p>
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
 <p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
@@ -54,7 +56,7 @@
         </section>
 
         <footer>
-          The Cymbalta WIthdrawal Project is maintained by <a href="https://sites.google.com/view/cymbaltawithdrawal">Cymbalta Withdrawal Project</a><br>
+          The Cymbalta Withdrawal Project is maintained by <a href="https://sites.google.com/view/cymbaltawithdrawal">Cymbalta Withdrawal Project</a><br>
 	  Contents © 2020
         </footer>
 
