--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
  <ul class="nav navbar-nav navbar-left">
 	<li><a href="index.html">Home</a></li>
 	<li><a href="#everything-you-need-To-know-about-cymbalta-withdrawal-symptoms">Cymbalta Withdrawal symptoms</a></li>
-	<li><a href="black-seed-oil-and-antidepressants.html">Black Seed oil and Antidepressants</a></li>
+	<li><a href="what-is-cymbalta">What is Cymbalta?</a></li>
 	<li><a href="how-long-does-cymbalta-withdrawal-last.html">How long does Cymbalta withdrawal last?</a></li>
-	<li><a href="macka-bs-black-seed-oil.html">Macka B's - Black Seed oil</a></li>
+	<li><a href="common-symptoms-related-to-cymbalta-withdrawal">Common symptoms</a></li>
 	<li><a href="how-to-taper-cymbalta.html">How to taper Cymbalta</a></li>
   </ul>
 <!-- /navbar-nav -->
@@ -42,11 +42,28 @@
 In this article, you can read everything that you need to know about Cymbalta withdrawal symptoms. So, without further ado, let's jump straight into the article:
 </p>
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<a id="what-is-cymbalta" class="anchor" href="#what-is-cymbalta" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>What is Cymbalta?</h3>
+<p>In a nutshell, Cymbalta is a popular brand name under which the drug, Duloxetine, is sold. This medicine is taken under clinical prescription to treat depression, anxiety, nerve pain, etc. It is a type of serotonin-norepinephrine reuptake inhibitor (SNRI).</p>
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<a id="common-symptoms-related-to-cymbalta-withdrawal" class="anchor" href="#common-symptoms-related-to-cymbalta-withdrawal" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Common Symptoms related to Cymbalta Withdrawal</h3>
+<p>Since Cymbalta works by increasing the serotonin and norepinephrine levels, your brain will have to adjust to lower levels when you withdraw from the drug. Thus, when your brain tries to adjust to the lower levels of serotonin and norepinephrine, you may experience some symptoms. These symptoms can last for days or weeks. 
+Some of the most reported symptoms related to Cymbalta Withdrawal include the following:</p>
+<p>
+<ul>
+  <li>Nausea</li>
+  <li>Irritation</li>
+  <li>Anxiety</li>
+  <li>Dizziness</li>
+	<li>Fatigue</li>
+	<li>Constipation</li>
+	<li>Dry Mouth</li>
+	<li>Electric sensation known as Brain Zaps</li>
+	<li>Nightmares</li>
+	<li>Vertigo</li>
+	<li>Loss of Appetite</li>
+	<li>Insomnia</li>
+	<li>Vomiting</li>
+</ul> 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 <p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a class="user-mention" data-hovercard-type="user" data-hovercard-url="/users/defunkt/hovercard" data-octo-click="hovercard-link-click" data-octo-dimensions="link_type:self" href="https://github.com/defunkt">@defunkt</a>), PJ Hyett (<a class="user-mention" data-hovercard-type="user" data-hovercard-url="/users/pjhyett/hovercard" data-octo-click="hovercard-link-click" data-octo-dimensions="link_type:self" href="https://github.com/pjhyett">@pjhyett</a>), and Tom Preston-Werner (<a class="user-mention" data-hovercard-type="user" data-hovercard-url="/users/mojombo/hovercard" data-octo-click="hovercard-link-click" data-octo-dimensions="link_type:self" href="https://github.com/mojombo">@mojombo</a>) founded GitHub.</p>
