--- a/index.html
+++ b/index.html
@@ -25,11 +25,10 @@
    <!-- navbar-collapse -->
   <nav role="navigation" class="collapse navbar-collapse navbar main-nav">
  <ul class="nav navbar-nav navbar-left">
-	<li><a href="index.html">Home</a></li>
 	<li><a href="#everything-you-need-To-know-about-cymbalta-withdrawal-symptoms">Cymbalta Withdrawal symptoms</a></li>
-	<li><a href="what-is-cymbalta">What is Cymbalta?</a></li>
-	<li><a href="how-long-does-cymbalta-withdrawal-last.html">How long does Cymbalta withdrawal last?</a></li>
-	<li><a href="common-symptoms-related-to-cymbalta-withdrawal">Common symptoms</a></li>
+	<li><a href="#what-is-cymbalta">What is Cymbalta?</a></li>
+	<li><a href="#how-long-does-cymbalta-withdrawal-last.html">How long does Cymbalta withdrawal last?</a></li>
+	<li><a href="#common-symptoms-related-to-cymbalta-withdrawal">Common symptoms</a></li>
 	<li><a href="how-to-taper-cymbalta.html">How to taper Cymbalta</a></li>
   </ul>
 <!-- /navbar-nav -->
