--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
  <ul class="nav navbar-nav navbar-left">
 	<li><a href="#everything-you-need-To-know-about-cymbalta-withdrawal-symptoms">Cymbalta Withdrawal symptoms</a></li>
 	<li><a href="#what-is-cymbalta">What is Cymbalta?</a></li>
-	<li><a href="#how-long-does-cymbalta-withdrawal-last.html">How long does Cymbalta withdrawal last?</a></li>
 	<li><a href="#common-symptoms-related-to-cymbalta-withdrawal">Common symptoms</a></li>
+	<li><a href="#cymbalta-withdrawal-symptoms-cold-turkey">Cymbalta Withdrawal Symptoms Cold Turkey</a></li>
 	<li><a href="how-to-taper-cymbalta.html">How to taper Cymbalta</a></li>
   </ul>
 <!-- /navbar-nav -->
@@ -64,9 +64,22 @@ Some of the most reported symptoms related to Cymbalta Withdrawal include the fo
 	<li>Vomiting</li>
 	</p>
 </ul> 
+
+<p>
+	As compared to other Serotonin and Norepinephrine Reuptake Inhibitors (SNRI), Cymbalta withdrawal symptoms are milder and usually end quicker. You may notice the Cymbalta withdrawal symptoms to appear on the second or third day of stopping your dose. And as said earlier, these symptoms usually last for a few weeks.
+	Thus, to control all these symptoms, doctors usually recommend tapering Cymbalta (slowly decreasing your dose instead of abruptly stopping it). This is a common withdrawal strategy associated with various SNRI withdrawals. However, even with this strategy, you may still experience some symptoms.
+	Other common Cymbalta withdrawal symptoms showed by the US National Library of Medicine include heartburn, urine changes, stomach pain, change in sexual abilities, uncontrollable shaking of certain body parts, and muscle cramps.
+	If your symptoms become intense, it is best to contact your doctor.
+</p>
+	    
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a class="user-mention" data-hovercard-type="user" data-hovercard-url="/users/defunkt/hovercard" data-octo-click="hovercard-link-click" data-octo-dimensions="link_type:self" href="https://github.com/defunkt">@defunkt</a>), PJ Hyett (<a class="user-mention" data-hovercard-type="user" data-hovercard-url="/users/pjhyett/hovercard" data-octo-click="hovercard-link-click" data-octo-dimensions="link_type:self" href="https://github.com/pjhyett">@pjhyett</a>), and Tom Preston-Werner (<a class="user-mention" data-hovercard-type="user" data-hovercard-url="/users/mojombo/hovercard" data-octo-click="hovercard-link-click" data-octo-dimensions="link_type:self" href="https://github.com/mojombo">@mojombo</a>) founded GitHub.</p>
+<a id="cymbalta-withdrawal-symptoms-cold-turkey" class="anchor" href="#cymbalta-withdrawal-symptoms-cold-turkey" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Cymbalta Withdrawal Symptoms Cold Turkey</h3>
+<p>If you quit Cymbalta abruptly, your symptoms may become severe and can even last for months. Cymbalta withdrawal symptoms cold turkey is dangerous. Thus, you should always consult a doctor before taking such a big step. Remember, Cymbalta manufacturers and even doctors recommend you to gradually reduce Cymbalta dosage instead of the Cymbalta cold turkey method.
+The symptoms that show after Cymbalta withdrawal cold turkey is known as Cymbalta Discontinuation Syndrome. This includes symptoms like severe headaches, nausea, and dizziness. Many patients also reported experiencing sensations like that of an electric shock in the head known as brain zaps or brain shivers.
+The cause of brain zaps from Cymbalta is not clear. However, it usually occurs due to the brain's reaction when you expose it to antidepressants. Some researchers also said that brain zaps from Cymbalta withdrawal are in relation to norepinephrine in particular. They also compare the brain zaps to that of a pre-seizure experience in epilepsy. 
+The Institute for Safe Medication Practices in 2016, reported a total of 888 withdrawal cases associated with Cymbalta. This is the highest number of cases reported related to any antidepressant withdrawal events affecting serotonin receptors.
+Another study made by the Institute for Safe Medication Practices showed that drugs with a shorter half-life (time taken by the body to eliminate the drug's half dose) cause more symptoms and side effects. And since Cymbalta has a relatively shorter half-life (about 12 hours) as compared to other antidepressants, symptoms are more frequent with Cymbalta.
+</p>
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
 <p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
