--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ Some of the most reported symptoms related to Cymbalta Withdrawal include the fo
 	As compared to other Serotonin and Norepinephrine Reuptake Inhibitors (SNRI), Cymbalta withdrawal symptoms are milder and usually end quicker. You may notice the Cymbalta withdrawal symptoms to appear on the second or third day of stopping your dose. And as said earlier, these symptoms usually last for a few weeks.</p>
 	<p>Thus, to control all these symptoms, doctors usually recommend tapering Cymbalta (slowly decreasing your dose instead of abruptly stopping it). This is a common withdrawal strategy associated with various SNRI withdrawals. However, even with this strategy, you may still experience some symptoms.</p>
 	<p>Other common Cymbalta withdrawal symptoms showed by the US National Library of Medicine include heartburn, urine changes, stomach pain, change in sexual abilities, uncontrollable shaking of certain body parts, and muscle cramps.</p>
-	<p>If your symptoms become intense, it is best to contact your doctor.</p>
+	<p>If your symptoms become intense, it is best to contact your doctor.
 </p>
 	    
 <h3>
