--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 	<li><a href="#everything-you-need-To-know-about-cymbalta-withdrawal-symptoms">Cymbalta Withdrawal symptoms</a></li>
 	<li><a href="#what-is-cymbalta">What is Cymbalta?</a></li>
 	<li><a href="#common-symptoms-related-to-cymbalta-withdrawal">Common symptoms</a></li>
-	<li><a href="#cymbalta-withdrawal-symptoms-cold-turkey">Cymbalta Withdrawal Symptoms Cold Turkey</a></li>
-	<li><a href="how-to-taper-cymbalta.html">How to taper Cymbalta</a></li>
+	<li><a href="#cymbalta-withdrawal-symptoms-cold-turkey">Cold Turkey Symptoms</a></li>
+	<li><a href="#how-long-does-cymbalta-withdrawal-symptoms-last">How long does Cymbalta Withdrawal Symptoms last?</a></li>
   </ul>
 <!-- /navbar-nav -->
 
@@ -81,8 +81,16 @@ Some of the most reported symptoms related to Cymbalta Withdrawal include the fo
 <p>Another study made by the Institute for Safe Medication Practices showed that drugs with a shorter half-life (time taken by the body to eliminate the drug's half dose) cause more symptoms and side effects. And since Cymbalta has a relatively shorter half-life (about 12 hours) as compared to other antidepressants, symptoms are more frequent with Cymbalta.
 </p>
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<a id="how-long-does-cymbalta-withdrawal-symptoms-last" class="anchor" href="#how-long-does-cymbalta-withdrawal-symptoms-last" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How long does Cymbalta Withdrawal Symptoms Last?</h3>
+<p>Symptoms of Cymbalta withdrawal varies from one person to another, depending on the dosage or method of withdrawal. Thus, how long Cymbalta withdrawal lasts also differs from one person to another.</p>
+<p>Cymbalta is a long-acting drug but with a shorter half-life. Thus, you may notice the Cymbalta withdrawal symptoms within 12 to 24 hours, once you eliminate the effect of the drug from your body.</p>
+<p>Cymbalta withdrawal symptoms range from physical symptoms to emotional ones. Emotional symptoms associated with Cymbalta withdrawal are milder than physical symptoms but usually last longer. Emotional symptoms can last for a few weeks and even up to months. On the other hand, physical Cymbalta withdrawal symptoms are pretty intense for the first three to four days. However, you may expect these symptoms to lessen over the week.</p>
+<p>Both emotional and physical symptoms related to Cymbalta withdrawal remain intense for the first few days, but the intensity tapers off over time.</p>
+	  
+	 <br />
+	  <p>Going through the Cymbalta withdrawal phase can be challenging for you if you've already formed a dependence on the drug. This is why you must follow a proper withdrawal method, like slowly tapering Cymbalta instead of abrupt withdrawal. 
+Make sure to seek professional help at all times to manage your Cymbalta withdrawal symptoms more effectively.
+	  </p>
         </section>
 
         <footer>
