--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
 <p>If you have ever encountered the popular antidepressant, Cymbalta, you might already know that it is a potent medication. Thus, you need to follow proper guidelines for both its consumption and withdrawal (we recommend clinical prescription). 
 In this article, you can read everything that you need to know about Cymbalta withdrawal symptoms. So, without further ado, let's jump straight into the article:
 </p>
+		
+<img class="fit-picture"
+src="/images/cymbalta-withdrawal.jpg"
+alt="Grapefruit slice atop a pile of other slices">
+		
 <h3>
 <a id="what-is-cymbalta" class="anchor" href="#what-is-cymbalta" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>What is Cymbalta?</h3>
 <p>In a nutshell, Cymbalta is a popular brand name under which the drug, Duloxetine, is sold. This medicine is taken under clinical prescription to treat depression, anxiety, nerve pain, etc. It is a type of serotonin-norepinephrine reuptake inhibitor (SNRI).</p>
