--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ In this article, you can read everything that you need to know about Cymbalta wi
 </p>
 		
 <img class="fit-picture"
-src="/images/cymbalta-withdrawal.jpg"
+src="https://cymbaltawithdrawal.github.io/Black-seed-oil/images/cymbalta-withdrawal.jpg"
 alt="Grapefruit slice atop a pile of other slices">
 		
 <h3>
