--- a/index.html
+++ b/index.html
@@ -41,9 +41,7 @@
 In this article, you can read everything that you need to know about Cymbalta withdrawal symptoms. So, without further ado, let's jump straight into the article:
 </p>
 		
-<img class="fit-picture"
-src="https://cymbaltawithdrawal.github.io/Black-seed-oil/images/cymbalta-withdrawal.jpg"
-alt="Grapefruit slice atop a pile of other slices">
+<img class="fit-picture" src="https://cymbaltawithdrawal.github.io/Black-seed-oil/images/cymbalta-withdrawal.jpg" alt="Grapefruit slice atop a pile of other slices">
 		
 <h3>
 <a id="what-is-cymbalta" class="anchor" href="#what-is-cymbalta" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>What is Cymbalta?</h3>
