--- a/index.html
+++ b/index.html
@@ -61,25 +61,25 @@ Some of the most reported symptoms related to Cymbalta Withdrawal include the fo
 	<li>Fatigue</li>
 	<li>Constipation</li>
 	<li>Dry Mouth</li>
-	<li>Electric sensation known as Brain Zaps</li>
+	<li>Electric sensation known as <a href="https://sites.google.com/view/cymbaltawithdrawal/cymbalta-withdrawal-brain-zaps">Brain Zaps</a></li>
 	<li>Nightmares</li>
 	<li>Vertigo</li>
 	<li>Loss of Appetite</li>
-	<li>Insomnia</li>
+	<li><a href="https://cymbalta-withdrawal.com/articles/antidepressants-and-insomnia/">Insomnia</a></li>
 	<li>Vomiting</li>
 	</p>
 </ul> 
 
 <p>
-	As compared to other Serotonin and Norepinephrine Reuptake Inhibitors (SNRI), Cymbalta withdrawal symptoms are milder and usually end quicker. You may notice the Cymbalta withdrawal symptoms to appear on the second or third day of stopping your dose. And as said earlier, these symptoms usually last for a few weeks.</p>
-	<p>Thus, to control all these symptoms, doctors usually recommend tapering Cymbalta (slowly decreasing your dose instead of abruptly stopping it). This is a common withdrawal strategy associated with various SNRI withdrawals. However, even with this strategy, you may still experience some symptoms.</p>
+	As compared to other <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4008300/">Serotonin and Norepinephrine Reuptake Inhibitors (SNRI)</a>, Cymbalta withdrawal symptoms are milder and usually end quicker. You may notice the Cymbalta withdrawal symptoms to appear on the second or third day of stopping your dose. And as said earlier, these symptoms usually last for a few weeks.</p>
+	<p>Thus, to control all these symptoms, doctors usually recommend <a href="https://cymbalta-withdrawal.com/cymbalta-tapering-handbook/">"tapering Cymbalta</a> (slowly decreasing your dose instead of abruptly stopping it). This is a common withdrawal strategy associated with various SNRI withdrawals. However, even with this strategy, you may still experience some symptoms.</p>
 	<p>Other common Cymbalta withdrawal symptoms showed by the US National Library of Medicine include heartburn, urine changes, stomach pain, change in sexual abilities, uncontrollable shaking of certain body parts, and muscle cramps.</p>
 	<p>If your symptoms become intense, it is best to contact your doctor.
 </p>
 	    
 <h3>
 <a id="cymbalta-withdrawal-symptoms-cold-turkey" class="anchor" href="#cymbalta-withdrawal-symptoms-cold-turkey" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Cymbalta Withdrawal Symptoms Cold Turkey</h3>
-<p>If you quit Cymbalta abruptly, your symptoms may become severe and can even last for months. Cymbalta withdrawal symptoms cold turkey is dangerous. Thus, you should always consult a doctor before taking such a big step. Remember, Cymbalta manufacturers and even doctors recommend you to gradually reduce Cymbalta dosage instead of the Cymbalta cold turkey method.</p>
+<p>If you quit Cymbalta abruptly, your symptoms may become severe and can even last for months. <a href="https://cymbalta-withdrawal.com/articles/the-effects-of-the-long-term-use-of-cymbalta/"Cymbalta withdrawal</a> symptoms cold turkey is dangerous. Thus, you should always consult a doctor before taking such a big step. Remember, Cymbalta manufacturers and even doctors recommend you to gradually reduce Cymbalta dosage instead of the Cymbalta cold turkey method.</p>
 <p>The symptoms that show after Cymbalta withdrawal cold turkey is known as Cymbalta Discontinuation Syndrome. This includes symptoms like severe headaches, nausea, and dizziness. Many patients also reported experiencing sensations like that of an electric shock in the head known as brain zaps or brain shivers.</p>
 <p>The cause of brain zaps from Cymbalta is not clear. However, it usually occurs due to the brain's reaction when you expose it to antidepressants. Some researchers also said that brain zaps from Cymbalta withdrawal are in relation to norepinephrine in particular. They also compare the brain zaps to that of a pre-seizure experience in epilepsy.</p>
 <p>The Institute for Safe Medication Practices in 2016, reported a total of 888 withdrawal cases associated with Cymbalta. This is the highest number of cases reported related to any antidepressant withdrawal events affecting serotonin receptors.</p>
