--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@ Some of the most reported symptoms related to Cymbalta Withdrawal include the fo
 </p>
 <h3>
 <a id="how-long-does-cymbalta-withdrawal-symptoms-last" class="anchor" href="#how-long-does-cymbalta-withdrawal-symptoms-last" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How long does Cymbalta Withdrawal Symptoms Last?</h3>
-<p>Symptoms of Cymbalta withdrawal varies from one person to another, depending on the dosage or method of withdrawal. Thus, how long Cymbalta withdrawal lasts also differs from one person to another.</p>
+<p>Symptoms of withdrawal varies from one person to another, depending on the dosage or method of withdrawal. Thus, how long Cymbalta withdrawal lasts also differs from one person to another.</p>
 <p>Cymbalta is a long-acting drug but with a shorter half-life. Thus, you may notice the Cymbalta withdrawal symptoms within 12 to 24 hours, once you eliminate the effect of the drug from your body.</p>
 <p>Cymbalta withdrawal symptoms range from physical symptoms to emotional ones. Emotional symptoms associated with Cymbalta withdrawal are milder than physical symptoms but usually last longer. Emotional symptoms can last for a few weeks and even up to months. On the other hand, physical Cymbalta withdrawal symptoms are pretty intense for the first three to four days. However, you may expect these symptoms to lessen over the week.</p>
 <p>Both emotional and physical symptoms related to Cymbalta withdrawal remain intense for the first few days, but the intensity tapers off over time.</p>
 	  
 	 <br/>
-	  <p>Going through the Cymbalta withdrawal phase can be challenging for you if you've already formed a dependence on the drug. This is why you must follow a proper withdrawal method, like slowly tapering Cymbalta instead of abrupt withdrawal. 
+	  <p>Going through the withdrawal phase can be challenging for you if you've already formed a dependence on the drug. This is why you must follow a proper withdrawal method, like slowly tapering Cymbalta instead of abrupt withdrawal. 
 Make sure to seek professional help at all times to manage your Cymbalta withdrawal symptoms more effectively.
 	  </p>
         </section>
