--- a/index.html
+++ b/index.html
@@ -71,16 +71,16 @@ Some of the most reported symptoms related to Cymbalta Withdrawal include the fo
 </ul> 
 
 <p>
-	As compared to other <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4008300/">Serotonin and Norepinephrine Reuptake Inhibitors (SNRI)</a>, Cymbalta withdrawal symptoms are milder and usually end quicker. You may notice the Cymbalta withdrawal symptoms to appear on the second or third day of stopping your dose. And as said earlier, these symptoms usually last for a few weeks.</p>
+	As compared to other <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4008300/">Serotonin and Norepinephrine Reuptake Inhibitors (SNRI)</a>, Cymbalta withdrawal symptoms are milder and usually end quicker. You may notice the withdrawal symptoms appear on the second or third day of stopping your dose. And as said earlier, these symptoms usually last for a few weeks.</p>
 	<p>Thus, to control all these symptoms, doctors usually recommend <a href="https://cymbalta-withdrawal.com/cymbalta-tapering-handbook/">tapering Cymbalta</a> (slowly decreasing your dose instead of abruptly stopping it). This is a common withdrawal strategy associated with various SNRI withdrawals. However, even with this strategy, you may still experience some symptoms.</p>
-	<p>Other common Cymbalta withdrawal symptoms showed by the US National Library of Medicine include heartburn, urine changes, stomach pain, change in sexual abilities, uncontrollable shaking of certain body parts, and muscle cramps.</p>
+	<p>Other common Cymbalta withdrawal symptoms shown by the US National Library of Medicine include heartburn, urine changes, stomach pain, change in sexual abilities, uncontrollable shaking of certain body parts, and muscle cramps.</p>
 	<p>If your symptoms become intense, it is best to contact your doctor.
 </p>
 	    
 <h3>
 <a id="cymbalta-withdrawal-symptoms-cold-turkey" class="anchor" href="#cymbalta-withdrawal-symptoms-cold-turkey" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Cymbalta Withdrawal Symptoms Cold Turkey</h3>
 <p>If you quit Cymbalta abruptly, your symptoms may become severe and can even last for months. <a href="https://cymbalta-withdrawal.com/articles/the-effects-of-the-long-term-use-of-cymbalta/">Cymbalta withdrawal</a> symptoms cold turkey is dangerous. Thus, you should always consult a doctor before taking such a big step. Remember, Cymbalta manufacturers and even doctors recommend you to gradually reduce Cymbalta dosage instead of the Cymbalta cold turkey method.</p>
-<p>The symptoms that show after Cymbalta withdrawal cold turkey is known as Cymbalta Discontinuation Syndrome. This includes symptoms like severe headaches, nausea, and dizziness. Many patients also reported experiencing sensations like that of an electric shock in the head known as brain zaps or brain shivers.</p>
+<p>The symptoms that show after going cold turkey is known as Cymbalta Discontinuation Syndrome. This includes symptoms like severe headaches, nausea, and dizziness. Many patients also reported experiencing sensations like that of an electric shock in the head known as brain zaps or brain shivers.</p>
 <p>The cause of brain zaps from Cymbalta is not clear. However, it usually occurs due to the brain's reaction when you expose it to antidepressants. Some researchers also said that brain zaps from Cymbalta withdrawal are in relation to norepinephrine in particular. They also compare the brain zaps to that of a pre-seizure experience in epilepsy.</p>
 <p>The Institute for Safe Medication Practices in 2016, reported a total of 888 withdrawal cases associated with Cymbalta. This is the highest number of cases reported related to any antidepressant withdrawal events affecting serotonin receptors.</p>
 <p>Another study made by the Institute for Safe Medication Practices showed that drugs with a shorter half-life (time taken by the body to eliminate the drug's half dose) cause more symptoms and side effects. And since Cymbalta has a relatively shorter half-life (about 12 hours) as compared to other antidepressants, symptoms are more frequent with Cymbalta.
@@ -88,9 +88,9 @@ Some of the most reported symptoms related to Cymbalta Withdrawal include the fo
 <h3>
 <a id="how-long-does-cymbalta-withdrawal-symptoms-last" class="anchor" href="#how-long-does-cymbalta-withdrawal-symptoms-last" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How long does Cymbalta Withdrawal Symptoms Last?</h3>
 <p>Symptoms of withdrawal varies from one person to another, depending on the dosage or method of withdrawal. Thus, how long Cymbalta withdrawal lasts also differs from one person to another.</p>
-<p>Cymbalta is a long-acting drug but with a shorter half-life. Thus, you may notice the Cymbalta withdrawal symptoms within 12 to 24 hours, once you eliminate the effect of the drug from your body.</p>
-<p>Cymbalta withdrawal symptoms range from physical symptoms to emotional ones. Emotional symptoms associated with Cymbalta withdrawal are milder than physical symptoms but usually last longer. Emotional symptoms can last for a few weeks and even up to months. On the other hand, physical Cymbalta withdrawal symptoms are pretty intense for the first three to four days. However, you may expect these symptoms to lessen over the week.</p>
-<p>Both emotional and physical symptoms related to Cymbalta withdrawal remain intense for the first few days, but the intensity tapers off over time.</p>
+<p>Cymbalta is a long-acting drug but with a shorter half-life. Thus, you may notice the withdrawal symptoms within 12 to 24 hours, once you eliminate the effect of the drug from your body.</p>
+<p>Cymbalta withdrawal symptoms range from physical symptoms to emotional ones. Emotional symptoms associated with Cymbalta withdrawal are milder than physical symptoms but usually last longer. Emotional symptoms can last for a few weeks and even up to months. On the other hand, physical withdrawal symptoms are pretty intense for the first three to four days. However, you may expect these symptoms to lessen over the week.</p>
+<p>Both emotional and physical symptoms related to withdrawal remain intense for the first few days, but the intensity tapers off over time.</p>
 	  
 	 <br/>
 	  <p>Going through the withdrawal phase can be challenging for you if you've already formed a dependence on the drug. This is why you must follow a proper withdrawal method, like slowly tapering Cymbalta instead of abrupt withdrawal. 
@@ -99,7 +99,7 @@ Make sure to seek professional help at all times to manage your Cymbalta withdra
         </section>
 
         <footer>
-          The Cymbalta Withdrawal Project is maintained by <a href="https://sites.google.com/view/cymbaltawithdrawal">Cymbalta Withdrawal Project</a><br>
+          This Project is maintained by the <a href="https://sites.google.com/view/cymbaltawithdrawal">Cymbalta Withdrawal Project</a><br>
 	  Contents © 2020
         </footer>
 
