--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ Some of the most reported symptoms related to Cymbalta Withdrawal include the fo
 <a id="cymbalta-withdrawal-symptoms-cold-turkey" class="anchor" href="#cymbalta-withdrawal-symptoms-cold-turkey" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Cymbalta Withdrawal Symptoms Cold Turkey</h3>
 <p>If you quit Cymbalta abruptly, your symptoms may become severe and can even last for months. <a href="https://cymbalta-withdrawal.com/articles/the-effects-of-the-long-term-use-of-cymbalta/">Cymbalta withdrawal</a> symptoms cold turkey is dangerous. Thus, you should always consult a doctor before taking such a big step. Remember, Cymbalta manufacturers and even doctors recommend you to gradually reduce Cymbalta dosage instead of the Cymbalta cold turkey method.</p>
 <p>The symptoms that show after going cold turkey is known as Cymbalta Discontinuation Syndrome. This includes symptoms like severe headaches, nausea, and dizziness. Many patients also reported experiencing sensations like that of an electric shock in the head known as brain zaps or brain shivers.</p>
-<p>The cause of brain zaps from Cymbalta is not clear. However, it usually occurs due to the brain's reaction when you expose it to antidepressants. Some researchers also said that brain zaps from Cymbalta withdrawal are in relation to norepinephrine in particular. They also compare the brain zaps to that of a pre-seizure experience in epilepsy.</p>
+<p>The cause of brain zaps from Cymbalta is not clear. However, it usually occurs due to the brain's reaction when you expose it to antidepressants. Some researchers also said that brain zaps from withdrawal are in relation to norepinephrine in particular. They also compare the brain zaps to that of a pre-seizure experience in epilepsy.</p>
 <p>The Institute for Safe Medication Practices in 2016, reported a total of 888 withdrawal cases associated with Cymbalta. This is the highest number of cases reported related to any antidepressant withdrawal events affecting serotonin receptors.</p>
 <p>Another study made by the Institute for Safe Medication Practices showed that drugs with a shorter half-life (time taken by the body to eliminate the drug's half dose) cause more symptoms and side effects. And since Cymbalta has a relatively shorter half-life (about 12 hours) as compared to other antidepressants, symptoms are more frequent with Cymbalta.
 </p>
@@ -89,12 +89,12 @@ Some of the most reported symptoms related to Cymbalta Withdrawal include the fo
 <a id="how-long-does-cymbalta-withdrawal-symptoms-last" class="anchor" href="#how-long-does-cymbalta-withdrawal-symptoms-last" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How long does Cymbalta Withdrawal Symptoms Last?</h3>
 <p>Symptoms of withdrawal varies from one person to another, depending on the dosage or method of withdrawal. Thus, how long Cymbalta withdrawal lasts also differs from one person to another.</p>
 <p>Cymbalta is a long-acting drug but with a shorter half-life. Thus, you may notice the withdrawal symptoms within 12 to 24 hours, once you eliminate the effect of the drug from your body.</p>
-<p>Cymbalta withdrawal symptoms range from physical symptoms to emotional ones. Emotional symptoms associated with Cymbalta withdrawal are milder than physical symptoms but usually last longer. Emotional symptoms can last for a few weeks and even up to months. On the other hand, physical withdrawal symptoms are pretty intense for the first three to four days. However, you may expect these symptoms to lessen over the week.</p>
+<p>Withdrawal symptoms range from physical symptoms to emotional ones. Emotional symptoms associated with withdrawal are milder than physical symptoms but usually last longer. Emotional symptoms can last for a few weeks and even up to months. On the other hand, physical withdrawal symptoms are pretty intense for the first three to four days. However, you may expect these symptoms to lessen over the week.</p>
 <p>Both emotional and physical symptoms related to withdrawal remain intense for the first few days, but the intensity tapers off over time.</p>
 	  
 	 <br/>
 	  <p>Going through the withdrawal phase can be challenging for you if you've already formed a dependence on the drug. This is why you must follow a proper withdrawal method, like slowly tapering Cymbalta instead of abrupt withdrawal. 
-Make sure to seek professional help at all times to manage your Cymbalta withdrawal symptoms more effectively.
+Make sure to seek professional help at all times to manage your withdrawal symptoms more effectively.
 	  </p>
         </section>
 
