--- a/index.html
+++ b/index.html
@@ -11,6 +11,49 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <title>The Cymbalta Withdrawal Project</title>
+<script type="application/ld+json">
+	{
+	"@context": "http://schema.org",
+	"@type": "Webpage",
+	"url": "https://cymbalta-withdrawal.com",
+	"name": "Cymbalta Withdrawal",
+	"headline": "Cymbalta Withdrawal",
+	"description": "Fighting Withdrawal symptoms with science",
+	"sameAs": [
+	  "https://cymbalta-withdrawal.com",
+	  "https://cymbaltawithdrawal.github.io/Black-seed-oil/",
+	  "https://twitter.com/cymbaltaw",
+	  "https://vimeo.com/cymbaltawithdrawal",
+	  "https://cymbaltawithdrawals.blogspot.com",
+	  "https://dependablehomebuyers.tumblr.com",
+	  "https://cymbaltawithdrawals.tumblr.com",
+	  "https://antiwithdrawals.wordpress.com",
+	  "https://cymbaltawithdrawal.netlify.app",
+	  "https://business.facebook.com/cymbaltaw/",
+	  "https://en.gravatar.com/antiwithdrawals"
+	],
+	"mainEntityOfPage": {
+	  "@type": "WebPage",
+	  "@id": "https://cymbaltawithdrawal.github.io/Black-seed-oil/"
+	},
+	"publisher": {
+	  "@type": "Organization",
+	  "name": "Cymbalta Withdrawal",
+	  "logo": {
+		  "url": "https://cymbaltawithdrawal.github.io/Black-seed-oil/images/pillz.png",
+		  "width": 300,
+		  "height": 200,
+		  "@type": "ImageObject"
+	  }
+	},
+	"image": {
+	  "@type": "ImageObject",
+	  "url": "https://cymbaltawithdrawal.github.io/Black-seed-oil/images/cymbalta-withdrawal.jpg",
+	  "width": 1000,
+	  "height": 458
+	}
+	}
+</script>
   </head>
 
   <body>
